--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,15 +12,11 @@
     </div>
     <div class="container">
     <div class="row">
-        <div class="col-md-3">
-        <h1>Responsive Web Design</h1>
-            <p>Responsive web design makes your web page look good on all devices.</p>
-
-            <p>Responsive web design uses only HTML and CSS.</p>
-
-            <p>Responsive web design is not a program or a JavaScript.</p>
+        <div class="col-md-4">
+        <h1>Ecommerce</h1>
+            <p>E-commerce (electronic commerce) is the activity of electronically buying or selling of products on online services or over the Internet. E-commerce draws on technologies such as mobile commerce, electronic funds transfer, supply chain management, Internet marketing, online transaction processing, electronic data interchange (EDI), inventory management systems, and automated data collection systems. E-commerce is in turn driven by the technological advances of the semiconductor industry, and is the largest sector of the electronics industry.</p>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-8">
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <img src="../assets/image-5.jpg" alt="banner" width="100%" height="uto">
