--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,14 +6,9 @@
 .card{
     height:100%;
 }
-// a{
-//     display:inline-block;
-//     padding:10px;
-//     background-color: aqua;
-// }
-// header{
-//     float:left;
-// }
-// .logo{
-//     float:left;
-// }
+.nav a{
+  font-weight: 700;
+}
+a:active{
+color:red;
+}
