--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <li class="nav-item"><a class="nav-link active" routerLink="/home">Home</a></li>
         <li class="nav-item"><a  class="nav-link" routerLink="/product">Products</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="aboutus">About us</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="contacts">contacts</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="contacts">contact</a></li>
         </ul> 
     </header>
     <div class="my-3">
