--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,105 +43,39 @@
         <h1>About us</h1>
         <p>A businessman or businesswoman is a person who has ownership or shareholdings over a private establishment and undertakes activities (commercial or industrial) for the purpose of generating cash flow, sales, and revenue by utilizing a combination of human, financial, intellectual and physical capital with a view to fueling economic development and growth.</p>
         <div class="row">
-            <div class="col-md-3">
-                <img src="../assets/CEO.jpg" alt="banner" width="100%" height="300vh">
-                <h3>David</h3> 
+            <div class="col-md-3" *ngFor="let image of images">
+                <img src="{{image.url}}" alt="banner" width="100%" height="300vh">
+                <h3>{{image.name}}</h3> 
             </div>
-            <div class="col-md-3">
-                <img src="../assets/image-2.jpg" alt="banner" width="100%" height="300vh">
-                <h3>James</h3>
-            </div>
-            <div class="col-md-3">
-                <img src="../assets/image-3.jpg" alt="banner" width="100%" height="300vh">
-                <h3>John</h3>
-            </div>
-            <div class="col-md-3">
-                <img src="../assets/image-4.jpg" alt="banner" width="100%" height="300vh">
-                <h3>Jesse</h3>
-            </div>
-
         </div>
     </div>
     <div class="container mt-5">
         <h1 class="text-center mb-5">Complete ECommerce Solution</h1>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4" *ngFor="let solution of solutions">
                 <div class="card">
+                    <img class="card-img-top" src="{{solution.url}}" alt="solution1" width="100%" height="200">
                     <div class="card-body">
-                    <img src="../assets/ecomm-2.jpg" alt="solution1" width="100%" height="200">
-                    <h4 class="m-2">Comprehensive eCommerce Platform</h4>
-                    <p class="m-2">
-                        Sell on multiple sales channels, like Facebook or eBay, and manage your store from one integrated dashboard—from store orders to payment, shipping, fulfillment, marketing and more.                </p>
+                    <h4 class="card-title m-2">{{solution.title}}</h4>
+                    <p class="m-2">{{solution.description}}</p>
                     </div>
-            </div>
-                </div>
-            <div class="col-md-4">
-                <div class="card">
-                <div class="card-body">
-                    <img src="../assets/Payment-Options.jpg" alt="solution2" width="100%" height="200">
-                    <h4>Advanced Payment Options</h4>
-                    <p>Offer customers secure checkout and handle business transactions seamlessly. Get competitive payment processing rates, custom payout schedules and dozens of payment providers.</p>
-                </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-
-                    <img src="../assets/ecomm-1.jpg" alt="solution3r" width="100%" height="200">
-                    <h4 class="m-2">Online stores</h4>
-                    <p class="m-2">
-                        Sell more and promote your brand with state-of-the-art storefronts, custom cart and checkout, and an industry-leading suite of professional eCommerce apps.
-                    </p>
-                    </div>
-                </div> 
             </div>
         </div>
+    </div>
     </div>
     <footer class="fluid-container bg-dark text-white mt-5 p-3">
         <div class="container">
         <div class="row text-center">
-            <div class="col-md-3">
-                <h5>Get to know Us</h5>
+            <div class="col-md-3" *ngFor="let detail of details">
+                <h5>{{detail.title}}</h5>
                 <ul type="none">
-                    <li>solution 1</li>
-                    <li>solution 2</li>
-                    <li>solution 3</li>
-                    <li>solution 4</li>
-                    <li>solution 5</li>
+                    <li>{{detail.sol1}}</li>
+                    <li>{{detail.sol2}}</li>
+                    <li>{{detail.sol3}}</li>
+                    <li>{{detail.sol4}}</li>
+                    <li>{{detail.sol5}}</li>
                 </ul>
 
-            </div>
-            <div class="col-md-3">
-                <h5>Make Money with us</h5>
-                <ul type="none">
-                    <li>option 1</li>
-                    <li>option 2</li>
-                    <li>option 3</li>
-                    <li>option 4</li>
-                    <li>option 5</li>
-                </ul>
-
-            </div>
-            <div class="col-md-3">
-                <h5>Solutions</h5>
-                <ul type="none">
-                    <li>solution 1</li>
-                    <li>solution 2</li>
-                    <li>solution 3</li>
-                    <li>solution 4</li>
-                    <li>solution 5</li>
-                </ul>
-            </div>
-            <div class="col-md-3">
-                <h5>Let Us Help You</h5>
-                <ul type="none">
-                    <li>option 1</li>
-                    <li>option 2</li>
-                    <li>option 3</li>
-                    <li>option 4</li>
-                    <li>option 5</li>
-                </ul>
             </div>
         </div>
     </div>
